// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders AudioPlayer 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#F2F2F2",
        "borderRadius": 5,
        "flex": 1,
        "flexDirection": "row",
        "height": 52,
        "maxHeight": 52,
      },
      undefined,
      undefined,
    ]
  }
  testID="player-wrapper"
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#CECECE",
          "borderBottomLeftRadius": 5,
          "borderTopLeftRadius": 5,
          "height": "100%",
          "opacity": 0.4,
          "position": "absolute",
        },
        undefined,
        Object {
          "width": "0%",
        },
      ]
    }
    testID="progress"
  />
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#CECECE",
        "borderRadius": 15,
        "elevation": 2,
        "height": 30,
        "justifyContent": "center",
        "marginLeft": 16,
        "opacity": 1,
        "shadowColor": "rgba(0, 0, 0, 0.8)",
        "shadowOffset": Object {
          "x": 0,
          "y": 1,
        },
        "shadowOpacity": 0.2,
        "shadowRadius": 1.41,
        "width": 30,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Object {
          "color": "#0B1B77",
          "fontFamily": "Ionicons",
          "fontSize": 20,
          "fontStyle": "normal",
          "fontWeight": "normal",
        }
      }
      text="ionicon-ios-play"
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/images/waves.png",
        }
      }
      style={
        Object {
          "resizeMode": "contain",
          "width": "80%",
        }
      }
    />
  </View>
  <Text
    style={
      Array [
        false,
        false,
        false,
        Object {
          "backgroundColor": "transparent",
          "color": "#000000",
          "fontFamily": "System",
          "fontSize": 12,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 16,
        },
        Object {
          "backgroundColor": "transparent",
          "fontFamily": "System",
          "fontWeight": "400",
        },
        Object {
          "bottom": 2,
          "position": "absolute",
          "right": 8,
        },
        Object {
          "color": "rgba(0,0,0,0.54)",
        },
        undefined,
        undefined,
      ]
    }
  >
    0:00
  </Text>
</View>
`;

exports[`renders AudioPlayer with delete icon 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#F2F2F2",
        "borderRadius": 5,
        "flex": 1,
        "flexDirection": "row",
        "height": 52,
        "maxHeight": 52,
      },
      undefined,
      undefined,
    ]
  }
  testID="player-wrapper"
>
  <View
    accessible={true}
    focusable={true}
    hitSlop={
      Object {
        "bottom": 50,
        "left": 50,
        "right": 50,
        "top": 50,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#CECECE",
        "borderRadius": 15,
        "elevation": 2,
        "height": 20,
        "justifyContent": "center",
        "opacity": 1,
        "position": "absolute",
        "right": -5,
        "shadowColor": "rgba(0, 0, 0, 0.8)",
        "shadowOffset": Object {
          "x": 0,
          "y": 1,
        },
        "shadowOpacity": 0.2,
        "shadowRadius": 1.41,
        "top": -5,
        "width": 20,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Object {
          "color": undefined,
          "fontFamily": "Ionicons",
          "fontSize": 20,
          "fontStyle": "normal",
          "fontWeight": "normal",
        }
      }
      text="ionicon-ios-close"
    />
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#CECECE",
          "borderBottomLeftRadius": 5,
          "borderTopLeftRadius": 5,
          "height": "100%",
          "opacity": 0.4,
          "position": "absolute",
        },
        undefined,
        Object {
          "width": "0%",
        },
      ]
    }
    testID="progress"
  />
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#CECECE",
        "borderRadius": 15,
        "elevation": 2,
        "height": 30,
        "justifyContent": "center",
        "marginLeft": 16,
        "opacity": 1,
        "shadowColor": "rgba(0, 0, 0, 0.8)",
        "shadowOffset": Object {
          "x": 0,
          "y": 1,
        },
        "shadowOpacity": 0.2,
        "shadowRadius": 1.41,
        "width": 30,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Object {
          "color": "#0B1B77",
          "fontFamily": "Ionicons",
          "fontSize": 20,
          "fontStyle": "normal",
          "fontWeight": "normal",
        }
      }
      text="ionicon-ios-play"
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/images/waves.png",
        }
      }
      style={
        Object {
          "resizeMode": "contain",
          "width": "80%",
        }
      }
    />
  </View>
  <Text
    style={
      Array [
        false,
        false,
        false,
        Object {
          "backgroundColor": "transparent",
          "color": "#000000",
          "fontFamily": "System",
          "fontSize": 12,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 16,
        },
        Object {
          "backgroundColor": "transparent",
          "fontFamily": "System",
          "fontWeight": "400",
        },
        Object {
          "bottom": 2,
          "position": "absolute",
          "right": 8,
        },
        Object {
          "color": "rgba(0,0,0,0.54)",
        },
        undefined,
        undefined,
      ]
    }
  >
    0:00
  </Text>
</View>
`;

exports[`renders round AudioPlayer 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#F2F2F2",
        "borderRadius": 5,
        "flex": 1,
        "flexDirection": "row",
        "height": 52,
        "maxHeight": 52,
      },
      undefined,
      Object {
        "borderBottomLeftRadius": 26,
        "borderRadius": 26,
        "borderTopLeftRadius": 26,
      },
    ]
  }
  testID="player-wrapper"
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#CECECE",
          "borderBottomLeftRadius": 5,
          "borderTopLeftRadius": 5,
          "height": "100%",
          "opacity": 0.4,
          "position": "absolute",
        },
        Object {
          "borderBottomLeftRadius": 26,
          "borderRadius": 26,
          "borderTopLeftRadius": 26,
        },
        Object {
          "width": "0%",
        },
      ]
    }
    testID="progress"
  />
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#CECECE",
        "borderRadius": 15,
        "elevation": 2,
        "height": 30,
        "justifyContent": "center",
        "marginLeft": 16,
        "opacity": 1,
        "shadowColor": "rgba(0, 0, 0, 0.8)",
        "shadowOffset": Object {
          "x": 0,
          "y": 1,
        },
        "shadowOpacity": 0.2,
        "shadowRadius": 1.41,
        "width": 30,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Object {
          "color": "#0B1B77",
          "fontFamily": "Ionicons",
          "fontSize": 20,
          "fontStyle": "normal",
          "fontWeight": "normal",
        }
      }
      text="ionicon-ios-play"
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/images/waves.png",
        }
      }
      style={
        Object {
          "resizeMode": "contain",
          "width": "80%",
        }
      }
    />
  </View>
  <Text
    style={
      Array [
        false,
        false,
        false,
        Object {
          "backgroundColor": "transparent",
          "color": "#000000",
          "fontFamily": "System",
          "fontSize": 12,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 16,
        },
        Object {
          "backgroundColor": "transparent",
          "fontFamily": "System",
          "fontWeight": "400",
        },
        Object {
          "bottom": 2,
          "position": "absolute",
          "right": 8,
        },
        Object {
          "color": "rgba(0,0,0,0.54)",
        },
        undefined,
        undefined,
      ]
    }
  >
    0:00
  </Text>
</View>
`;
